--- a/src/common.blocks/software/software.scss
+++ b/src/common.blocks/software/software.scss
@@ -1,4 +1,6 @@
-.software__content-wrapper {
+@import '../software-item/software-item';
+
+.software {
   display: flex;
   flex-flow: column wrap;
   align-content: space-between;
@@ -7,11 +9,11 @@
   margin-left: 5.5px;
   margin-right: 0.5px;
   width: 99%;
-}
 
-@media screen and (max-width: 722px) {
-  .software__content-wrapper {
+  @media screen and (max-width: 722px) {
     height: 500px;
     align-content: center;
   }
 }
+
+
