add directory for body.scss and html.scss as for blocks #7

--- a/src/basic/style.scss
+++ b/src/basic/style.scss
@@ -1,7 +1,7 @@
 @import '../fonts/fonts';
 
-@import '../common.blocks/html';
-@import '../common.blocks/body';
+@import '../common.blocks/html/html';
+@import '../common.blocks/body/body';
 
 @import '../common.blocks/layout-grid/layout-grid';
 
