--- a/src/common.blocks/header/header.pug
+++ b/src/common.blocks/header/header.pug
@@ -1,8 +1,9 @@
 mixin header()
-  .header__disk
-    .header__disk-inner
-  .header__name
-    span.header__name-here name here
-    <br>
-    span.header__surname surname
-  .header__job graphic designer
+  .header
+    .header__disk
+      .header__disk-inner
+    .header__name
+      span.header__name-here name here
+      <br>
+      span.header__surname surname
+    .header__job graphic designer
