refactor profile and block-header #7

--- a/src/common.blocks/profile/profile.pug
+++ b/src/common.blocks/profile/profile.pug
@@ -1,5 +1,5 @@
 mixin profile()
-  .profile__content
+  .profile
     span
       | Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
       | Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
