--- a/src/basic/style.scss
+++ b/src/basic/style.scss
@@ -4,17 +4,13 @@
 @import '../common.blocks/body/body';
 
 @import '../common.blocks/layout-grid/layout-grid';
+@import '../common.blocks/section-wrapper/section-wrapper';
+@import '../common.blocks/block-header/block-header';
 
 @import '../common.blocks/header/header';
 
-@import '../common.blocks/section-wrapper/section-wrapper';
 
-@import '../common.blocks/block-header/block-header__wrapper';
-@import '../common.blocks/block-header/block-header__name';
-@import '../common.blocks/block-header/block-header__line';
-@import '../common.blocks/block-header/block-header__icon';
-
-@import '../common.blocks/profile/profile__content';
+@import '../common.blocks/profile/profile';
 
 @import '../common.blocks/contact/contact';
 
