--- a/src/common.blocks/block-header/block-header.pug
+++ b/src/common.blocks/block-header/block-header.pug
@@ -1,5 +1,5 @@
 mixin block-header(icon_name, block_name)
-  header.block-header__wrapper
+  header.block-header
     img.block-header__icon(src=require('../img/icons/' + icon_name) alt=block_name)
     div.block-header__name= block_name
     div.block-header__line
