--- a/src/basic/style.scss
+++ b/src/basic/style.scss
@@ -1,4 +1,4 @@
-@import '../fonts/fonts';
+@import '../fonts/myriad-pro';
 
 @import '../common.blocks/html/html';
 @import '../common.blocks/body/body';
