--- a/src/common.blocks/block-header/block-header.scss
+++ b/src/common.blocks/block-header/block-header.scss
@@ -5,7 +5,7 @@
 
   &__name {
     color: #3d6cb0;
-    font-family: "Myriad Pro - Bold";
+    font-weight: bold;
     margin-left: 2.4%;
     margin-top: -4px;
     font-size: 2.671rem;
