--- a/src/common.blocks/education-item/education-item.scss
+++ b/src/common.blocks/education-item/education-item.scss
@@ -26,7 +26,7 @@
 
   &__degree {
     color: #3d6cb0;
-    font-family: "Myriad Pro - Bold";
+    font-weight: bold;
     font-size: 1.66rem;
     text-transform: uppercase;
     margin-right: 17px;
@@ -34,27 +34,21 @@
 
   &__studying-time {
     color: #020202;
-    font-family: "Myriad Pro - Regular";
     font-size: 1.7rem;
-    font-weight: 400;
     display: inline-block;
     margin-left: -2px;
   }
 
   &__university-name {
     color: #000000;
-    font-family: "Myriad Pro - Regular";
     font-size: 1.66rem;
-    font-weight: 400;
     text-transform: uppercase;
     line-height: 1.45;
   }
 
   &__description {
     color: #000000;
-    font-family: "Myriad Pro - Regular";
     font-size: 1rem;
-    font-weight: 400;
     display: inline-block;
     margin-top: 2.5px;
     margin-left: 2px;
