--- a/src/common.blocks/html/html.scss
+++ b/src/common.blocks/html/html.scss
@@ -1,5 +1,7 @@
 html {
-  font-family: 'Myriad Pro - Regular';
+  font-family: 'Myriad Pro';
+  font-weight: normal;
+  font-style: normal;
   font-size: calc(9.791px + 0.5vw);
   color: #000000;
 
