--- a/src/common.blocks/profile/profile.scss
+++ b/src/common.blocks/profile/profile.scss
@@ -1,11 +1,10 @@
 .profile {
   color: #000000;
-  font-family: "Myriad Pro - Regular";
   font-size: 1rem;
   margin-top: 12.7px;
   margin-left: 0.35px;
 
   .bold {
-    font-family: "Myriad Pro - Bold";
+    font-weight: bold;
   }
 }
