--- a/src/common.blocks/contact-item/contact-item.scss
+++ b/src/common.blocks/contact-item/contact-item.scss
@@ -24,7 +24,6 @@
   &__data {
     display: table-cell;
     color: #000000;
-    font-family: "Myriad Pro - Regular";
     font-size: 1.34rem;
     padding-top: 9px;
     padding-left: 5px;
@@ -43,9 +42,8 @@
   &__type {
     display: table-cell;
     color: #3d6cb0;
-    font-family: "Myriad Pro - Bold";
     font-size: 1.3rem;
-    font-weight: 700;
+    font-weight: bold;
     text-transform: uppercase;
     padding: 24px 1.79em 32px*0.55 0px;
 
