add spare fonts

--- a/src/common.blocks/html/html.scss
+++ b/src/common.blocks/html/html.scss
@@ -1,5 +1,5 @@
 html {
-  font-family: 'Myriad Pro';
+  font-family: 'Myriad Pro', 'Arial', sans-serif;
   font-weight: normal;
   font-style: normal;
   font-size: calc(9.791px + 0.5vw);
