make every mixins returning blocks with class with the same name #7

--- a/src/common.blocks/contact/contact.pug
+++ b/src/common.blocks/contact/contact.pug
@@ -1,6 +1,7 @@
 include ../contact-item/contact-item
 
 mixin contact(items)
-  table.contact__table
-    each item in items
-      +contact-item(item.type, item.data)
+  .contact
+    table.contact__table
+      each item in items
+        +contact-item(item.type, item.data)
