--- a/src/common.blocks/experience/experience.pug
+++ b/src/common.blocks/experience/experience.pug
@@ -1,4 +1,5 @@
-include ../education/education
+include ../progress-list/progress-list
 
 mixin experience(items)
-  +education(items, 'experience')
+  .experience
+    +progress-list(items)
