remove html, body, section-wrapper and layout-grid to separate src/styles/base.scss #7

--- a/src/basic/style.scss
+++ b/src/basic/style.scss
@@ -1,12 +1,7 @@
 @import '../fonts/myriad-pro';
+@import '../styles/base';
 
-@import '../common.blocks/html/html';
-@import '../common.blocks/body/body';
-
-@import '../common.blocks/layout-grid/layout-grid';
-@import '../common.blocks/section-wrapper/section-wrapper';
 @import '../common.blocks/block-header/block-header';
-
 @import '../common.blocks/header/header';
 @import '../common.blocks/profile/profile';
 @import '../common.blocks/contact/contact';
