rename snake_case variables to camelCase in *.pug #10

--- a/src/common.blocks/block-header/block-header.pug
+++ b/src/common.blocks/block-header/block-header.pug
@@ -1,5 +1,5 @@
-mixin block-header(icon_name, block_name)
+mixin block-header(iconName, blockName)
   header.block-header
-    img.block-header__icon(src=require('../img/icons/' + icon_name) alt=block_name)
-    div.block-header__name= block_name
+    img.block-header__icon(src=require('../img/icons/' + iconName) alt=blockName)
+    div.block-header__name= blockName
     div.block-header__line
