replace concatenation with template strings in *.pug #9

--- a/src/common.blocks/block-header/block-header.pug
+++ b/src/common.blocks/block-header/block-header.pug
@@ -1,5 +1,5 @@
 mixin block-header(iconName, blockName)
   header.block-header
-    img.block-header__icon(src=require('../img/icons/' + iconName) alt=blockName)
+    img.block-header__icon(src=require(`../img/icons/${iconName}`) alt=blockName)
     div.block-header__name= blockName
     div.block-header__line
