--- a/src/common.blocks/software-item/software-item.pug
+++ b/src/common.blocks/software-item/software-item.pug
@@ -4,6 +4,6 @@ mixin software-item(tool, possession)
   .software-item
     .software-item__tool= tool
     .software-item__scale
-      div(class='software-item__level' style={width: possess + '%'})
+      div(class='software-item__level' style={width: `${possess}%`})
 
 
