--- a/src/common.blocks/contact/contact.pug
+++ b/src/common.blocks/contact/contact.pug
@@ -4,4 +4,4 @@ mixin contact(items)
   .contact
     table.contact__table
       each item in items
-        +contact-item(item.type, item.data)
+        +contact-item(item)
