--- a/src/common.blocks/software/software.pug
+++ b/src/common.blocks/software/software.pug
@@ -3,4 +3,4 @@ include ../software-item/software-item
 mixin software(items)
   .software
     each item in items
-      +software-item(item.tool, item.possession)
+      +software-item(item)
