--- a/src/common.blocks/contact-item/contact-item.pug
+++ b/src/common.blocks/contact-item/contact-item.pug
@@ -1,4 +1,4 @@
-mixin contact-item(type, data)
+mixin contact-item({ type, data })
   tr.contact-item
     td.contact-item__type= type
     td.contact-item__data= data
