--- a/src/common.blocks/skills-item/skills-item.pug
+++ b/src/common.blocks/skills-item/skills-item.pug
@@ -1,9 +1,9 @@
-mixin skills-item(skillName, level)
-  - var checked = +level
+mixin skills-item({ name, level })
+  - var checked = +level;
   - var notChecked = 12 - checked;
 
   .skills-item
-    .skills-item__name= skillName
+    .skills-item__name= name
     .skills-item__level
       while checked > 0
         div(class=['skills-item__point', 'skills-item__point_checked'])
