--- a/src/common.blocks/skills/skills.pug
+++ b/src/common.blocks/skills/skills.pug
@@ -3,4 +3,4 @@ include ../skills-item/skills-item
 mixin skills(items)
   .skills
     each item in items
-      +skills-item(item.name, item.level)
+      +skills-item(item)
