replace colors codes with variables

--- a/src/common.blocks/profile/profile.scss
+++ b/src/common.blocks/profile/profile.scss
@@ -1,5 +1,7 @@
+@import '../../styles/colors';
+
 .profile {
-  color: #000000;
+  color: $black;
   font-size: 1rem;
   margin-top: 12.7px;
   margin-left: 0.35px;
