--- a/src/common.blocks/block-header/block-header.scss
+++ b/src/common.blocks/block-header/block-header.scss
@@ -1,10 +1,12 @@
+@import '../../styles/colors';
+
 .block-header {
   width: 100%;
   display: flex;
   align-items: center;
 
   &__name {
-    color: #3d6cb0;
+    color: $blue;
     font-weight: bold;
     margin-left: 2.4%;
     margin-top: -4px;
@@ -23,7 +25,7 @@
     margin-top: -5px;
     margin-right: 1px;
     height: 0.45vw;
-    background-color: #3d6cb0;
+    background-color: $blue;
   }
 
   &__icon {
