--- a/src/common.blocks/contact-item/contact-item.scss
+++ b/src/common.blocks/contact-item/contact-item.scss
@@ -1,3 +1,5 @@
+@import '../../styles/colors';
+
 .contact-item {
   display: table-row;
 
@@ -23,7 +25,7 @@
 
   &__data {
     display: table-cell;
-    color: #000000;
+    color: $black;
     font-size: 1.34rem;
     padding-top: 9px;
     padding-left: 5px;
@@ -41,7 +43,7 @@
 
   &__type {
     display: table-cell;
-    color: #3d6cb0;
+    color: $blue;
     font-size: 1.3rem;
     font-weight: bold;
     text-transform: uppercase;
