--- a/src/common.blocks/header/header.scss
+++ b/src/common.blocks/header/header.scss
@@ -1,3 +1,5 @@
+@import '../../styles/colors';
+
 .header {
   width: 100%;
   display: flex;
@@ -7,7 +9,7 @@
   &__disk {
     width: 14.891em;
     height: 14.891em;
-    border: 2px solid #3d6cb0;
+    border: 2px solid $blue;
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -20,7 +22,7 @@
   &__disk-inner {
     width: 13.236em;
     height: 13.236em;
-    background-color: #3d6cb0;
+    background-color: $blue;
     border-radius: 50%;
   }
 
@@ -31,7 +33,7 @@
   }
 
   &__name-here {
-    color: #000000;
+    color: $black;
     font-size: 3.46rem;
     font-weight: 300;
     text-transform: uppercase;
@@ -39,7 +41,7 @@
   }
 
   &__surname {
-    color: #000000;
+    color: $black;
     font-weight: bold;
     font-size: 4.015rem;
     text-transform: uppercase;
@@ -49,7 +51,7 @@
   }
 
   &__job {
-    color: #000000;
+    color: $black;
     font-weight: bold;
     font-size: 1.565rem;
     text-transform: uppercase;
