--- a/src/common.blocks/profile/profile.pug
+++ b/src/common.blocks/profile/profile.pug
@@ -6,8 +6,9 @@ mixin profile()
       | Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
       | Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
       | In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.
-      | Nullam dictum felis eu <span class="bold">pede mollis pretium. Integer tincidunt.
-      | Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.
-      | Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
-      | Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.
-      | Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum.</span>
+      | Nullam dictum felis eu
+      strong pede mollis pretium. Integer tincidunt.
+        |  Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.
+        | Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
+        | Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.
+        | Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum.
