--- a/src/common.blocks/contact-item/contact-item.scss
+++ b/src/common.blocks/contact-item/contact-item.scss
@@ -67,5 +67,14 @@
       padding-top: 22px;
     }
   }
+
+  &__data-link {
+    color: inherit;
+    text-decoration: none;
+
+    &:hover {
+      color: $blue;
+    }
+  }
 }
 
