--- a/src/common.blocks/contact-item/contact-item.pug
+++ b/src/common.blocks/contact-item/contact-item.pug
@@ -1,4 +1,12 @@
-mixin contact-item({ type, data })
+mixin contact-item({ type, data, attr })
   tr.contact-item
     td.contact-item__type= type
-    td.contact-item__data= data
+    td.contact-item__data
+      if !attr
+        span.contact-item__data-text= data
+      else if attr === 'site'
+        a.contact-item__data-link(href=`http://${data}` target="_blank" rel="noopener noreferrer")= data
+      else
+        a.contact-item__data-link(href=`${attr}: ${data}` target="_blank" rel="noopener noreferrer")= data
+
+
