fix destructuring in the arguments in header #13

--- a/src/common.blocks/header/header.pug
+++ b/src/common.blocks/header/header.pug
@@ -1,4 +1,4 @@
-mixin header({ name, surname, job} = { name: 'name here', surname: 'surname', job: 'graphic designer' })
+mixin header({ name = 'name here', surname = 'surname', job = 'graphic designer' } = {})
   .header
     .header__disk
       .header__disk-inner
