get rid of semantically not meaningful br tags #15

--- a/src/common.blocks/header/header.pug
+++ b/src/common.blocks/header/header.pug
@@ -3,7 +3,6 @@ mixin header({ name = 'name here', surname = 'surname', job = 'graphic designer'
     .header__disk
       .header__disk-inner
     .header__name
-      span.header__name-here= name
-      br
-      span.header__surname= surname
+      .header__name-here= name
+      .header__surname= surname
     .header__job= job
