--- a/src/common.blocks/progress-list-item/progress-list-item.pug
+++ b/src/common.blocks/progress-list-item/progress-list-item.pug
@@ -1,8 +1,7 @@
 mixin progress-list-item({ name, period, title, description, nameColor })
   li.progress-list-item
-    span(class=["progress-list-item__name", `progress-list-item__name_color_#{nameColor}`])= name
-    span.progress-list-item__period // #{period}
-    br
+    .progress-list-item__header
+      span(class=["progress-list-item__name", `progress-list-item__name_color_#{nameColor}`])= name
+      span.progress-list-item__period // #{period}
     span.progress-list-item__title= title
-    br
-    span.progress-list-item__description= description
+    p.progress-list-item__description= description
