--- a/src/common.blocks/education/education.pug
+++ b/src/common.blocks/education/education.pug
@@ -2,4 +2,5 @@ include ../progress-list/progress-list
 
 mixin education(items)
   .education
-    +progress-list(items)
+    .education__list
+      +progress-list(items)
