--- a/src/common.blocks/experience/experience.pug
+++ b/src/common.blocks/experience/experience.pug
@@ -2,4 +2,5 @@ include ../progress-list/progress-list
 
 mixin experience(items)
   .experience
-    +progress-list(items)
+    .experience__list
+      +progress-list(items)
