--- a/src/common.blocks/experience/experience.scss
+++ b/src/common.blocks/experience/experience.scss
@@ -1,7 +1,11 @@
 @import '../progress-list/progress-list';
 
 .experience {
-  margin-left: 15px;
-  margin-top: 42px;
   width: 100%;
+
+  &__list {
+    @media screen and (max-width: 722px) {
+      margin-left: 5px;
+    }
+  }
 }
