--- a/src/common.blocks/block-header/block-header.scss
+++ b/src/common.blocks/block-header/block-header.scss
@@ -9,7 +9,7 @@
     color: $blue;
     font-weight: bold;
     margin-left: 2.4%;
-    margin-top: -4px;
+    margin-bottom: 4px;
     font-size: 2.671rem;
     white-space: nowrap;
     text-transform: uppercase;
@@ -22,7 +22,7 @@
   &__line {
     width: 100%;
     margin-left: 1.7%;
-    margin-top: -5px;
+    margin-bottom: 5px;
     margin-right: 1px;
     height: 0.45vw;
     background-color: $blue;
