--- a/src/basic/index.pug
+++ b/src/basic/index.pug
@@ -21,7 +21,7 @@ html
       section(class=['section-wrapper', 'section-wrapper_type_for-header'])
         +header
 
-      section.section-wrapper
+      section.section-wrapper.section-wrapper_type_for-profile
         +block-header({
           iconName: 'profile-icon.png',
           blockName: 'profile'
@@ -29,11 +29,13 @@ html
         .section-wrapper__content_type_for-profile
           +profile
 
-      section.section-wrapper
-        +block-header({
-          iconName: 'contact-icon.png',
-          blockName: 'contact'
-        })
+      section.section-wrapper.section-wrapper_type_for-contact
+        .section-wrapper__header_type_for-contact
+          +block-header({
+            iconName: 'contact-icon.png',
+            blockName: 'contact'
+          })
+
         -
           const contactsItems = [
             {
