change single quotes to double in pug files #16

--- a/src/common.blocks/contact-item/contact-item.pug
+++ b/src/common.blocks/contact-item/contact-item.pug
@@ -4,7 +4,7 @@ mixin contact-item({ type, data, attr })
     td.contact-item__data
       if !attr
         span.contact-item__data-text= data
-      else if attr === 'site'
+      else if attr === "site"
         a.contact-item__data-link(href=`http://${data}` target="_blank" rel="noopener noreferrer")= data
       else
         a.contact-item__data-link(href=`${attr}: ${data}` target="_blank" rel="noopener noreferrer")= data
