change single quotes to double in pug #16

--- a/src/basic/index.pug
+++ b/src/basic/index.pug
@@ -64,7 +64,7 @@ html
       section(class=["section-wrapper", "section-wrapper_type_for-skills"])
         +block-header({
           iconName: "skills-icon.png",
-          blockName: 'skills'
+          blockName: "skills"
         })
         -
           const skillsItems = [
