change double quotes to single in scss #16

--- a/src/common.blocks/progress-list-item/progress-list-item.scss
+++ b/src/common.blocks/progress-list-item/progress-list-item.scss
@@ -5,7 +5,7 @@
   color: $black;
 
   &:before {
-    content: "";
+    content: '';
     background-color: $black;
     width: 1.324em;
     height: 1.324em;
