fix codestyle in software-item

--- a/src/common.blocks/software-item/software-item.pug
+++ b/src/common.blocks/software-item/software-item.pug
@@ -2,6 +2,6 @@ mixin software-item({ tool, possession })
   .software-item
     .software-item__tool= tool
     .software-item__scale
-      div(class="software-item__level" style={width: `${+possession}%`})
+      .software-item__level(style={width: `${+possession}%`})
 
 
