--- a/src/common.blocks/contact-item/contact-item.scss
+++ b/src/common.blocks/contact-item/contact-item.scss
@@ -6,21 +6,13 @@
   @media screen and (max-width: 400px) {
     display: block;
     text-align: center;
-    margin-bottom: 20px;
-
-    &:last-child {
-      margin-bottom: 0;
-    }
+    padding: 10px 0;
   }
 
   @media screen and (max-width: 1094px) and (min-width: 723px) {
     display: block;
     text-align: center;
-    margin-bottom: 20px;
-
-    &:last-child {
-      margin-bottom: 0;
-    }
+    padding: 10px 0;
   }
 
   &__data {
@@ -65,6 +57,14 @@
   &:nth-child(4) {
     .contact-item__type {
       padding-top: 22px;
+
+      @media screen and (max-width: 400px) {
+        padding-top: 0;
+      }
+
+      @media screen and (max-width: 1094px) and (min-width: 723px) {
+        padding-top: 0;
+      }
     }
   }
 
